calc-parser.output
Terminals unused in grammar

    INTEGER
    DOUBLE
    NUM
    RATIO
    '='


Grammar

    0 $accept: line $end

    1 line: assignment '\n'
    2     | line assignment '\n'
    3     | insertation '\n'
    4     | line insertation '\n'
    5     | statements '\n'
    6     | line statements '\n'
    7     | expr '\n'
    8     | line expr '\n'
    9     | quantity '\n'
   10     | line quantity '\n'
   11     | boolexpr '\n'
   12     | line boolexpr '\n'

   13 number: integer
   14       | integer POINT fraction

   15 integer: group
   16        | group hundrets
   17        | group hundrets integer

   18 group: UNIT
   19      | TEEN
   20      | TEN
   21      | TEN UNIT
   22      | UNIT HUNDRED
   23      | UNIT HUNDRED group

   24 hundrets: THOUSAND
   25         | MILLION
   26         | BILLION

   27 fraction: UNIT
   28         | UNIT UNIT
   29         | UNIT UNIT UNIT

   30 expr: number
   31     | expr PLUS expr
   32     | expr MINUS expr
   33     | expr TIMES expr
   34     | expr DIVIDE expr
   35     | expr FACT
   36     | NEG expr
   37     | MINUS expr
   38     | expr EXP expr
   39     | LPAREN expr RPAREN
   40     | ID

   41 quantity: number MEASURE
   42         | quantity PLUS quantity
   43         | quantity MINUS quantity
   44         | quantity TIMES quantity
   45         | quantity DIVIDE quantity
   46         | quantity EXP expr
   47         | expr TIMES quantity
   48         | expr DIVIDE quantity
   49         | quantity TIMES expr
   50         | quantity DIVIDE expr
   51         | expr FACT MEASURE
   52         | NEG expr MEASURE
   53         | MINUS expr MEASURE
   54         | LPAREN parenquantity RPAREN
   55         | parenquantity EXP expr

   56 parenquantity: LPAREN quantity RPAREN

   57 assignment: ID ASSIGN expr
   58           | BOOL_ID ASSIGN boolexpr
   59           | ID ASSIGN boolexpr
   60           | BOOL_ID ASSIGN expr

   61 insertation: INT ID ASSIGN expr
   62            | DOU ID ASSIGN expr
   63            | BOOL BOOL_ID ASSIGN boolexpr
   64            | INT ID ASSIGN boolexpr
   65            | DOU ID ASSIGN boolexpr
   66            | BOOL BOOL_ID ASSIGN expr

   67 statements: WHILE LPAREN boolexpr RPAREN expr
   68           | IF LPAREN boolexpr RPAREN expr ELSE expr

   69 boolexpr: BOOLEAN
   70         | BOOL_ID
   71         | expr RELATION expr


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2 3 4 5 6 7 8 9 10 11 12
    '=' (61)
    error (256)
    UNIT <value> (258) 18 21 22 23 27 28 29
    TEEN <value> (259) 19
    TEN <value> (260) 20 21
    HUNDRED <value> (261) 22 23
    THOUSAND <value> (262) 24
    MILLION <value> (263) 25
    BILLION <value> (264) 26
    INTEGER <value> (265)
    DOUBLE <value> (266)
    NUM <value> (267)
    POINT <op> (268) 14
    EXP <op> (269) 38 46 55
    FACT <op> (270) 35 51
    NEG <op> (271) 36 52
    PLUS <op> (272) 31 42
    MINUS <op> (273) 32 37 43 53
    TIMES <op> (274) 33 44 47 49
    DIVIDE <op> (275) 34 45 48 50
    LPAREN <op> (276) 39 54 56 67 68
    RPAREN <op> (277) 39 54 56 67 68
    RATIO (278)
    IF (279) 68
    WHILE (280) 67
    ELSE (281) 68
    ID <lexeme> (282) 40 57 59 61 62 64 65
    BOOLEAN <lexeme> (283) 69
    RELATION <lexeme> (284) 71
    BOOL_ID <lexeme> (285) 58 60 63 66 70
    INT (286) 61 64
    DOU (287) 62 65
    BOOL (288) 63 66
    ASSIGN (289) 57 58 59 60 61 62 63 64 65 66
    MEASURE <quantity> (290) 41 51 52 53
    LOWEST (291)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    line <value> (40)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12
        on right: 0 2 4 6 8 10 12
    number <value> (41)
        on left: 13 14
        on right: 30 41
    integer <value> (42)
        on left: 15 16 17
        on right: 13 14 17
    group <value> (43)
        on left: 18 19 20 21 22 23
        on right: 15 16 17 23
    hundrets <value> (44)
        on left: 24 25 26
        on right: 16 17
    fraction <value> (45)
        on left: 27 28 29
        on right: 14
    expr <value> (46)
        on left: 30 31 32 33 34 35 36 37 38 39 40
        on right: 7 8 31 32 33 34 35 36 37 38 39 46 47 48 49 50 51 52 53 55 57 60 61 62 66 67 68 71
    quantity <quantity> (47)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 9 10 42 43 44 45 46 47 48 49 50 56
    parenquantity <quantity> (48)
        on left: 56
        on right: 54 55
    assignment <lexeme> (49)
        on left: 57 58 59 60
        on right: 1 2
    insertation <lexeme> (50)
        on left: 61 62 63 64 65 66
        on right: 3 4
    statements <value> (51)
        on left: 67 68
        on right: 5 6
    boolexpr <condition> (52)
        on left: 69 70 71
        on right: 11 12 58 59 63 64 65 67 68


State 0

    0 $accept: • line $end

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 4
    MINUS    shift, and go to state 5
    LPAREN   shift, and go to state 6
    IF       shift, and go to state 7
    WHILE    shift, and go to state 8
    ID       shift, and go to state 9
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 11
    INT      shift, and go to state 12
    DOU      shift, and go to state 13
    BOOL     shift, and go to state 14

    line           go to state 15
    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 19
    quantity       go to state 20
    parenquantity  go to state 21
    assignment     go to state 22
    insertation    go to state 23
    statements     go to state 24
    boolexpr       go to state 25


State 1

   18 group: UNIT •
   22      | UNIT • HUNDRED
   23      | UNIT • HUNDRED group

    HUNDRED  shift, and go to state 26

    $default  reduce using rule 18 (group)


State 2

   19 group: TEEN •

    $default  reduce using rule 19 (group)


State 3

   20 group: TEN •
   21      | TEN • UNIT

    UNIT  shift, and go to state 27

    $default  reduce using rule 20 (group)


State 4

   36 expr: NEG • expr
   52 quantity: NEG • expr MEASURE

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 33


State 5

   37 expr: MINUS • expr
   53 quantity: MINUS • expr MEASURE

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 34


State 6

   39 expr: LPAREN • expr RPAREN
   54 quantity: LPAREN • parenquantity RPAREN
   56 parenquantity: LPAREN • quantity RPAREN

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 4
    MINUS   shift, and go to state 5
    LPAREN  shift, and go to state 6
    ID      shift, and go to state 31

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 35
    quantity       go to state 36
    parenquantity  go to state 37


State 7

   68 statements: IF • LPAREN boolexpr RPAREN expr ELSE expr

    LPAREN  shift, and go to state 38


State 8

   67 statements: WHILE • LPAREN boolexpr RPAREN expr

    LPAREN  shift, and go to state 39


State 9

   40 expr: ID •
   57 assignment: ID • ASSIGN expr
   59           | ID • ASSIGN boolexpr

    ASSIGN  shift, and go to state 40

    $default  reduce using rule 40 (expr)


State 10

   69 boolexpr: BOOLEAN •

    $default  reduce using rule 69 (boolexpr)


State 11

   58 assignment: BOOL_ID • ASSIGN boolexpr
   60           | BOOL_ID • ASSIGN expr
   70 boolexpr: BOOL_ID •

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 70 (boolexpr)


State 12

   61 insertation: INT • ID ASSIGN expr
   64            | INT • ID ASSIGN boolexpr

    ID  shift, and go to state 42


State 13

   62 insertation: DOU • ID ASSIGN expr
   65            | DOU • ID ASSIGN boolexpr

    ID  shift, and go to state 43


State 14

   63 insertation: BOOL • BOOL_ID ASSIGN boolexpr
   66            | BOOL • BOOL_ID ASSIGN expr

    BOOL_ID  shift, and go to state 44


State 15

    0 $accept: line • $end
    2 line: line • assignment '\n'
    4     | line • insertation '\n'
    6     | line • statements '\n'
    8     | line • expr '\n'
   10     | line • quantity '\n'
   12     | line • boolexpr '\n'

    $end     shift, and go to state 45
    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 4
    MINUS    shift, and go to state 5
    LPAREN   shift, and go to state 6
    IF       shift, and go to state 7
    WHILE    shift, and go to state 8
    ID       shift, and go to state 9
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 11
    INT      shift, and go to state 12
    DOU      shift, and go to state 13
    BOOL     shift, and go to state 14

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 46
    quantity       go to state 47
    parenquantity  go to state 21
    assignment     go to state 48
    insertation    go to state 49
    statements     go to state 50
    boolexpr       go to state 51


State 16

   30 expr: number •
   41 quantity: number • MEASURE

    MEASURE  shift, and go to state 52

    $default  reduce using rule 30 (expr)


State 17

   13 number: integer •
   14       | integer • POINT fraction

    POINT  shift, and go to state 53

    $default  reduce using rule 13 (number)


State 18

   15 integer: group •
   16        | group • hundrets
   17        | group • hundrets integer

    THOUSAND  shift, and go to state 54
    MILLION   shift, and go to state 55
    BILLION   shift, and go to state 56

    $default  reduce using rule 15 (integer)

    hundrets  go to state 57


State 19

    7 line: expr • '\n'
   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   38     | expr • EXP expr
   47 quantity: expr • TIMES quantity
   48         | expr • DIVIDE quantity
   51         | expr • FACT MEASURE
   71 boolexpr: expr • RELATION expr

    EXP       shift, and go to state 58
    FACT      shift, and go to state 59
    PLUS      shift, and go to state 60
    MINUS     shift, and go to state 61
    TIMES     shift, and go to state 62
    DIVIDE    shift, and go to state 63
    RELATION  shift, and go to state 64
    '\n'      shift, and go to state 65


State 20

    9 line: quantity • '\n'
   42 quantity: quantity • PLUS quantity
   43         | quantity • MINUS quantity
   44         | quantity • TIMES quantity
   45         | quantity • DIVIDE quantity
   46         | quantity • EXP expr
   49         | quantity • TIMES expr
   50         | quantity • DIVIDE expr

    EXP     shift, and go to state 66
    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    TIMES   shift, and go to state 69
    DIVIDE  shift, and go to state 70
    '\n'    shift, and go to state 71


State 21

   55 quantity: parenquantity • EXP expr

    EXP  shift, and go to state 72


State 22

    1 line: assignment • '\n'

    '\n'  shift, and go to state 73


State 23

    3 line: insertation • '\n'

    '\n'  shift, and go to state 74


State 24

    5 line: statements • '\n'

    '\n'  shift, and go to state 75


State 25

   11 line: boolexpr • '\n'

    '\n'  shift, and go to state 76


State 26

   22 group: UNIT HUNDRED •
   23      | UNIT HUNDRED • group

    UNIT  shift, and go to state 1
    TEEN  shift, and go to state 2
    TEN   shift, and go to state 3

    $default  reduce using rule 22 (group)

    group  go to state 77


State 27

   21 group: TEN UNIT •

    $default  reduce using rule 21 (group)


State 28

   36 expr: NEG • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 78


State 29

   37 expr: MINUS • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 79


State 30

   39 expr: LPAREN • expr RPAREN

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 80


State 31

   40 expr: ID •

    $default  reduce using rule 40 (expr)


State 32

   30 expr: number •

    $default  reduce using rule 30 (expr)


State 33

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   36     | NEG expr •
   38     | expr • EXP expr
   52 quantity: NEG expr • MEASURE

    EXP      shift, and go to state 58
    FACT     shift, and go to state 81
    MEASURE  shift, and go to state 84

    $default  reduce using rule 36 (expr)


State 34

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   37     | MINUS expr •
   38     | expr • EXP expr
   53 quantity: MINUS expr • MEASURE

    EXP      shift, and go to state 58
    FACT     shift, and go to state 81
    MEASURE  shift, and go to state 85

    $default  reduce using rule 37 (expr)


State 35

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   38     | expr • EXP expr
   39     | LPAREN expr • RPAREN
   47 quantity: expr • TIMES quantity
   48         | expr • DIVIDE quantity
   51         | expr • FACT MEASURE

    EXP     shift, and go to state 58
    FACT    shift, and go to state 59
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    TIMES   shift, and go to state 62
    DIVIDE  shift, and go to state 63
    RPAREN  shift, and go to state 86


State 36

   42 quantity: quantity • PLUS quantity
   43         | quantity • MINUS quantity
   44         | quantity • TIMES quantity
   45         | quantity • DIVIDE quantity
   46         | quantity • EXP expr
   49         | quantity • TIMES expr
   50         | quantity • DIVIDE expr
   56 parenquantity: LPAREN quantity • RPAREN

    EXP     shift, and go to state 66
    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    TIMES   shift, and go to state 69
    DIVIDE  shift, and go to state 70
    RPAREN  shift, and go to state 87


State 37

   54 quantity: LPAREN parenquantity • RPAREN
   55         | parenquantity • EXP expr

    EXP     shift, and go to state 72
    RPAREN  shift, and go to state 88


State 38

   68 statements: IF LPAREN • boolexpr RPAREN expr ELSE expr

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 28
    MINUS    shift, and go to state 29
    LPAREN   shift, and go to state 30
    ID       shift, and go to state 31
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 89

    number    go to state 32
    integer   go to state 17
    group     go to state 18
    expr      go to state 90
    boolexpr  go to state 91


State 39

   67 statements: WHILE LPAREN • boolexpr RPAREN expr

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 28
    MINUS    shift, and go to state 29
    LPAREN   shift, and go to state 30
    ID       shift, and go to state 31
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 89

    number    go to state 32
    integer   go to state 17
    group     go to state 18
    expr      go to state 90
    boolexpr  go to state 92


State 40

   57 assignment: ID ASSIGN • expr
   59           | ID ASSIGN • boolexpr

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 28
    MINUS    shift, and go to state 29
    LPAREN   shift, and go to state 30
    ID       shift, and go to state 31
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 89

    number    go to state 32
    integer   go to state 17
    group     go to state 18
    expr      go to state 93
    boolexpr  go to state 94


State 41

   58 assignment: BOOL_ID ASSIGN • boolexpr
   60           | BOOL_ID ASSIGN • expr

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 28
    MINUS    shift, and go to state 29
    LPAREN   shift, and go to state 30
    ID       shift, and go to state 31
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 89

    number    go to state 32
    integer   go to state 17
    group     go to state 18
    expr      go to state 95
    boolexpr  go to state 96


State 42

   61 insertation: INT ID • ASSIGN expr
   64            | INT ID • ASSIGN boolexpr

    ASSIGN  shift, and go to state 97


State 43

   62 insertation: DOU ID • ASSIGN expr
   65            | DOU ID • ASSIGN boolexpr

    ASSIGN  shift, and go to state 98


State 44

   63 insertation: BOOL BOOL_ID • ASSIGN boolexpr
   66            | BOOL BOOL_ID • ASSIGN expr

    ASSIGN  shift, and go to state 99


State 45

    0 $accept: line $end •

    $default  accept


State 46

    8 line: line expr • '\n'
   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   38     | expr • EXP expr
   47 quantity: expr • TIMES quantity
   48         | expr • DIVIDE quantity
   51         | expr • FACT MEASURE
   71 boolexpr: expr • RELATION expr

    EXP       shift, and go to state 58
    FACT      shift, and go to state 59
    PLUS      shift, and go to state 60
    MINUS     shift, and go to state 61
    TIMES     shift, and go to state 62
    DIVIDE    shift, and go to state 63
    RELATION  shift, and go to state 64
    '\n'      shift, and go to state 100


State 47

   10 line: line quantity • '\n'
   42 quantity: quantity • PLUS quantity
   43         | quantity • MINUS quantity
   44         | quantity • TIMES quantity
   45         | quantity • DIVIDE quantity
   46         | quantity • EXP expr
   49         | quantity • TIMES expr
   50         | quantity • DIVIDE expr

    EXP     shift, and go to state 66
    PLUS    shift, and go to state 67
    MINUS   shift, and go to state 68
    TIMES   shift, and go to state 69
    DIVIDE  shift, and go to state 70
    '\n'    shift, and go to state 101


State 48

    2 line: line assignment • '\n'

    '\n'  shift, and go to state 102


State 49

    4 line: line insertation • '\n'

    '\n'  shift, and go to state 103


State 50

    6 line: line statements • '\n'

    '\n'  shift, and go to state 104


State 51

   12 line: line boolexpr • '\n'

    '\n'  shift, and go to state 105


State 52

   41 quantity: number MEASURE •

    $default  reduce using rule 41 (quantity)


State 53

   14 number: integer POINT • fraction

    UNIT  shift, and go to state 106

    fraction  go to state 107


State 54

   24 hundrets: THOUSAND •

    $default  reduce using rule 24 (hundrets)


State 55

   25 hundrets: MILLION •

    $default  reduce using rule 25 (hundrets)


State 56

   26 hundrets: BILLION •

    $default  reduce using rule 26 (hundrets)


State 57

   16 integer: group hundrets •
   17        | group hundrets • integer

    UNIT  shift, and go to state 1
    TEEN  shift, and go to state 2
    TEN   shift, and go to state 3

    $default  reduce using rule 16 (integer)

    integer  go to state 108
    group    go to state 18


State 58

   38 expr: expr EXP • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 109


State 59

   35 expr: expr FACT •
   51 quantity: expr FACT • MEASURE

    MEASURE  shift, and go to state 110

    $default  reduce using rule 35 (expr)


State 60

   31 expr: expr PLUS • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 111


State 61

   32 expr: expr MINUS • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 112


State 62

   33 expr: expr TIMES • expr
   47 quantity: expr TIMES • quantity

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 4
    MINUS   shift, and go to state 5
    LPAREN  shift, and go to state 6
    ID      shift, and go to state 31

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 113
    quantity       go to state 114
    parenquantity  go to state 21


State 63

   34 expr: expr DIVIDE • expr
   48 quantity: expr DIVIDE • quantity

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 4
    MINUS   shift, and go to state 5
    LPAREN  shift, and go to state 6
    ID      shift, and go to state 31

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 115
    quantity       go to state 116
    parenquantity  go to state 21


State 64

   71 boolexpr: expr RELATION • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 117


State 65

    7 line: expr '\n' •

    $default  reduce using rule 7 (line)


State 66

   46 quantity: quantity EXP • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 118


State 67

   42 quantity: quantity PLUS • quantity

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 4
    MINUS   shift, and go to state 5
    LPAREN  shift, and go to state 6
    ID      shift, and go to state 31

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 119
    quantity       go to state 120
    parenquantity  go to state 21


State 68

   43 quantity: quantity MINUS • quantity

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 4
    MINUS   shift, and go to state 5
    LPAREN  shift, and go to state 6
    ID      shift, and go to state 31

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 119
    quantity       go to state 121
    parenquantity  go to state 21


State 69

   44 quantity: quantity TIMES • quantity
   49         | quantity TIMES • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 4
    MINUS   shift, and go to state 5
    LPAREN  shift, and go to state 6
    ID      shift, and go to state 31

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 122
    quantity       go to state 123
    parenquantity  go to state 21


State 70

   45 quantity: quantity DIVIDE • quantity
   50         | quantity DIVIDE • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 4
    MINUS   shift, and go to state 5
    LPAREN  shift, and go to state 6
    ID      shift, and go to state 31

    number         go to state 16
    integer        go to state 17
    group          go to state 18
    expr           go to state 124
    quantity       go to state 125
    parenquantity  go to state 21


State 71

    9 line: quantity '\n' •

    $default  reduce using rule 9 (line)


State 72

   55 quantity: parenquantity EXP • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 126


State 73

    1 line: assignment '\n' •

    $default  reduce using rule 1 (line)


State 74

    3 line: insertation '\n' •

    $default  reduce using rule 3 (line)


State 75

    5 line: statements '\n' •

    $default  reduce using rule 5 (line)


State 76

   11 line: boolexpr '\n' •

    $default  reduce using rule 11 (line)


State 77

   23 group: UNIT HUNDRED group •

    $default  reduce using rule 23 (group)


State 78

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   36     | NEG expr •
   38     | expr • EXP expr

    EXP   shift, and go to state 58
    FACT  shift, and go to state 81

    $default  reduce using rule 36 (expr)


State 79

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   37     | MINUS expr •
   38     | expr • EXP expr

    EXP   shift, and go to state 58
    FACT  shift, and go to state 81

    $default  reduce using rule 37 (expr)


State 80

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   38     | expr • EXP expr
   39     | LPAREN expr • RPAREN

    EXP     shift, and go to state 58
    FACT    shift, and go to state 81
    PLUS    shift, and go to state 60
    MINUS   shift, and go to state 61
    TIMES   shift, and go to state 82
    DIVIDE  shift, and go to state 83
    RPAREN  shift, and go to state 86


State 81

   35 expr: expr FACT •

    $default  reduce using rule 35 (expr)


State 82

   33 expr: expr TIMES • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 127


State 83

   34 expr: expr DIVIDE • expr

    UNIT    shift, and go to state 1
    TEEN    shift, and go to state 2
    TEN     shift, and go to state 3
    NEG     shift, and go to state 28
    MINUS   shift, and go to state 29
    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31

    number   go to state 32
    integer  go to state 17
    group    go to state 18
    expr     go to state 128


State 84

   52 quantity: NEG expr MEASURE •

    $default  reduce using rule 52 (quantity)


State 85

   53 quantity: MINUS expr MEASURE •

    $default  reduce using rule 53 (quantity)


State 86

   39 expr: LPAREN expr RPAREN •

    $default  reduce using rule 39 (expr)


State 87

   56 parenquantity: LPAREN quantity RPAREN •

    $default  reduce using rule 56 (parenquantity)


State 88

   54 quantity: LPAREN parenquantity RPAREN •

    $default  reduce using rule 54 (quantity)


State 89

   70 boolexpr: BOOL_ID •

    $default  reduce using rule 70 (boolexpr)


State 90

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   38     | expr • EXP expr
   71 boolexpr: expr • RELATION expr

    EXP       shift, and go to state 58
    FACT      shift, and go to state 81
    PLUS      shift, and go to state 60
    MINUS     shift, and go to state 61
    TIMES     shift, and go to state 82
    DIVIDE    shift, and go to state 83
    RELATION  shift, and go to state 64


State 91

   68 statements: IF LPAREN boolexpr • RPAREN expr ELSE expr

    RPAREN  shift, and go to state 129


State 92

   67 statements: WHILE LPAREN boolexpr • RPAREN expr

    RPAREN  shift, and go to state 130


State 93

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   38     | expr • EXP expr
   57 assignment: ID ASSIGN expr •
   71 boolexpr: expr • RELATION expr

    EXP       shift, and go to state 58
    FACT      shift, and go to state 81
    PLUS      shift, and go to state 60
    MINUS     shift, and go to state 61
    TIMES     shift, and go to state 82
    DIVIDE    shift, and go to state 83
    RELATION  shift, and go to state 64

    $default  reduce using rule 57 (assignment)


State 94

   59 assignment: ID ASSIGN boolexpr •

    $default  reduce using rule 59 (assignment)


State 95

   31 expr: expr • PLUS expr
   32     | expr • MINUS expr
   33     | expr • TIMES expr
   34     | expr • DIVIDE expr
   35     | expr • FACT
   38     | expr • EXP expr
   60 assignment: BOOL_ID ASSIGN expr •
   71 boolexpr: expr • RELATION expr

    EXP       shift, and go to state 58
    FACT      shift, and go to state 81
    PLUS      shift, and go to state 60
    MINUS     shift, and go to state 61
    TIMES     shift, and go to state 82
    DIVIDE    shift, and go to state 83
    RELATION  shift, and go to state 64

    $default  reduce using rule 60 (assignment)


State 96

   58 assignment: BOOL_ID ASSIGN boolexpr •

    $default  reduce using rule 58 (assignment)


State 97

   61 insertation: INT ID ASSIGN • expr
   64            | INT ID ASSIGN • boolexpr

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 28
    MINUS    shift, and go to state 29
    LPAREN   shift, and go to state 30
    ID       shift, and go to state 31
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 89

    number    go to state 32
    integer   go to state 17
    group     go to state 18
    expr      go to state 131
    boolexpr  go to state 132


State 98

   62 insertation: DOU ID ASSIGN • expr
   65            | DOU ID ASSIGN • boolexpr

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 28
    MINUS    shift, and go to state 29
    LPAREN   shift, and go to state 30
    ID       shift, and go to state 31
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 89

    number    go to state 32
    integer   go to state 17
    group     go to state 18
    expr      go to state 133
    boolexpr  go to state 134


State 99

   63 insertation: BOOL BOOL_ID ASSIGN • boolexpr
   66            | BOOL BOOL_ID ASSIGN • expr

    UNIT     shift, and go to state 1
    TEEN     shift, and go to state 2
    TEN      shift, and go to state 3
    NEG      shift, and go to state 28
    MINUS    shift, and go to state 29
    LPAREN   shift, and go to state 30
    ID       shift, and go to state 31
    BOOLEAN  shift, and go to state 10
    BOOL_ID  shift, and go to state 89
